testsuite/tests/checks/exit_statements_with_no_loop_name_nested/test.out
nested.adb:5:10: error: exit statement with no loop name
5 |          exit when I < J;  --  FLAG
  |          ^^^^^^^^^^^^^^^^ 

